--- a/src/styles/base/_index.scss
+++ b/src/styles/base/_index.scss
@@ -1,4 +1,3 @@
-@forward './reset';
-@forward './variables';
-@forward './base';
-@forward './typography';
+@forward "./reset";
+@forward "./variables";
+@forward "./base";
